--- a/sys/cus_fin.html
+++ b/sys/cus_fin.html
@@ -36,9 +36,9 @@
 <!--/Pre Loader -->
 <!-- Color Changer -->
 <div class="theme-settings" id="switcher">
-		<span class="theme-click">
-			<span class="ti-settings"></span>
-		</span>
+<!--		<span class="theme-click">-->
+<!--			<span class="ti-settings"></span>-->
+<!--		</span>-->
 	<span class="theme-color theme-default theme-active" data-color="green"></span>
 	<span class="theme-color theme-blue" data-color="blue"></span>
 	<span class="theme-color theme-red" data-color="red"></span>
@@ -72,11 +72,11 @@
 							<!--								<a class="dropdown-item" href="#" onclick="">-->
 							<!--									<span class="ti-wheelchair"></span> 新消息</a>-->
 							<a class="dropdown-item" href="his-orders.html">
-								<span class="ti-money"></span> 已收款订单</a>
-							<a class="dropdown-item" href="ing-orders.html">
-								<span class="ti-time"></span>在途订单</a>
-							<a class="dropdown-item" href="cre-orders.html">
-								<span class="ti-wheelchair"></span> 未安排订单</a>
+								<span class="ti-money"></span> 订单信息</a>
+<!--							<a class="dropdown-item" href="ing-orders.html">-->
+<!--								<span class="ti-time"></span>在途订单</a>-->
+<!--							<a class="dropdown-item" href="cre-orders.html">-->
+<!--								<span class="ti-wheelchair"></span> 未安排订单</a>-->
 						</div>
 					</li>
 					<li class="nav-item">
@@ -129,23 +129,23 @@
 							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
 							   aria-expanded="false"><span class="ti-pencil-alt"></span> 订单管理</a>
 							<div class="dropdown-menu">
-								<a class="dropdown-item" href="#" onclick="exportTemplate(4)">导出订单模板</a>
+<!--								<a class="dropdown-item" href="#" onclick="exportTemplate(4)">导出订单模板</a>-->
 								<a class="dropdown-item" href="add-order.html">添加采购订单</a>
 								<a class="dropdown-item" href="orders.html">订单列表</a>
-								<a class="dropdown-item" href="his-orders.html">已完成订单信息</a>
-								<a class="dropdown-item" href="ing-orders.html">在途订单信息</a>
-								<a class="dropdown-item" href="cre-orders.html">未发货订单信息</a>
+								<a class="dropdown-item" href="his-orders.html">订单信息展示及导出</a>
+<!--								<a class="dropdown-item" href="ing-orders.html">在途订单信息</a>-->
+<!--								<a class="dropdown-item" href="cre-orders.html">未发货订单信息</a>-->
 							</div>
 						</li>
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-							   aria-expanded="false"><span class="ti-money"></span> 统计及其他</a>
-							<div class="dropdown-menu">
-								<a class="dropdown-item" href="payment-year.html">收入对比统计</a>
-								<a class="dropdown-item" href="payment-quart.html">客户列表</a>
-								<!--								<a class="dropdown-item" href="payment-month.html">月度统计</a>-->
-							</div>
-						</li>
+<!--						<li class="nav-item dropdown">-->
+<!--							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"-->
+<!--							   aria-expanded="false"><span class="ti-money"></span> 统计及其他</a>-->
+<!--							<div class="dropdown-menu">-->
+<!--								<a class="dropdown-item" href="payment-year.html">收入对比统计</a>-->
+<!--								<a class="dropdown-item" href="payment-quart.html">客户列表</a>-->
+<!--								&lt;!&ndash;								<a class="dropdown-item" href="payment-month.html">月度统计</a>&ndash;&gt;-->
+<!--							</div>-->
+<!--						</li>-->
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
 							   aria-expanded="false"><span class="ti-key"></span> 药品数据导入导出</a>
