--- a/sys/cus_fin2.html
+++ b/sys/cus_fin2.html
@@ -53,7 +53,7 @@
 		<div class="container top-brand">
 			<nav class="navbar navbar-default">
 				<div class="navbar-header">
-					<div class="sidebar-header"> <a href="main.html"><img src="images/logo-dark.png" class="logo" alt="logo"></a>
+					<div class="sidebar-header"> <a href="main2.html"><img src="images/logo-dark.png" class="logo" alt="logo"></a>
 					</div>
 				</div>
 				<ul class="nav justify-content-end">
@@ -71,8 +71,8 @@
 							<h5>订单通知</h5>
 							<!--								<a class="dropdown-item" href="#" onclick="">-->
 							<!--									<span class="ti-wheelchair"></span> 新消息</a>-->
-							<a class="dropdown-item" href="his-orders.html">
-								<span class="ti-money"></span> 订单信息</a>
+<!--							<a class="dropdown-item" href="his-orders.html">-->
+<!--								<span class="ti-money"></span> 订单信息</a>-->
 <!--							<a class="dropdown-item" href="ing-orders.html">-->
 <!--								<span class="ti-time"></span>在途订单</a>-->
 <!--							<a class="dropdown-item" href="cre-orders.html">-->
@@ -113,26 +113,26 @@
 							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
 							   aria-expanded="false"><span class="ti-home"></span> 主页</a>
 							<div class="dropdown-menu">
-								<a class="dropdown-item" href="main.html">回到主页</a>
+								<a class="dropdown-item" href="main2.html">回到主页</a>
 							</div>
 						</li>
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-							   aria-expanded="false"><span class="ti-user"></span> 人员管理</a>
-							<div class="dropdown-menu">
-								<a class="dropdown-item" href="add-user.html">添加用户信息</a>
-								<a class="dropdown-item" href="users.html">管理用户信息</a>
-								<a class="dropdown-item" href="edit-user.html">编辑我的个人信息</a>
-							</div>
-						</li>
+<!--						<li class="nav-item dropdown">-->
+<!--							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"-->
+<!--							   aria-expanded="false"><span class="ti-user"></span> 人员管理</a>-->
+<!--							<div class="dropdown-menu">-->
+<!--								<a class="dropdown-item" href="add-user.html">添加用户信息</a>-->
+<!--								<a class="dropdown-item" href="users.html">管理用户信息</a>-->
+<!--								<a class="dropdown-item" href="edit-user.html">编辑我的个人信息</a>-->
+<!--							</div>-->
+<!--						</li>-->
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
 							   aria-expanded="false"><span class="ti-pencil-alt"></span> 订单管理</a>
 							<div class="dropdown-menu">
 <!--								<a class="dropdown-item" href="#" onclick="exportTemplate(4)">导出订单模板</a>-->
-								<a class="dropdown-item" href="add-order.html">添加采购订单</a>
-								<a class="dropdown-item" href="orders.html">订单列表</a>
-								<a class="dropdown-item" href="his-orders.html">订单信息展示及导出</a>
+								<a class="dropdown-item" href="add-order2.html">添加采购订单</a>
+								<a class="dropdown-item" href="orders2.html">订单列表</a>
+<!--								<a class="dropdown-item" href="his-orders.html">订单信息展示及导出</a>-->
 <!--								<a class="dropdown-item" href="ing-orders.html">在途订单信息</a>-->
 <!--								<a class="dropdown-item" href="cre-orders.html">未发货订单信息</a>-->
 							</div>
@@ -146,33 +146,34 @@
 <!--								&lt;!&ndash;								<a class="dropdown-item" href="payment-month.html">月度统计</a>&ndash;&gt;-->
 <!--							</div>-->
 <!--						</li>-->
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-							   aria-expanded="false"><span class="ti-key"></span> 药品数据导入导出</a>
-							<div class="dropdown-menu">
-								<a class="dropdown-item" href="#" onclick="exportTemplate()">导出模板</a>
-								<a class="dropdown-item" href="expin.html">excle导入数据</a>
-								<a class="dropdown-item" href="record_fin.html">手动录入</a>
-							</div>
-						</li>
+<!--						<li class="nav-item dropdown">-->
+<!--							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"-->
+<!--							   aria-expanded="false"><span class="ti-key"></span> 药品数据导入导出</a>-->
+<!--							<div class="dropdown-menu">-->
+<!--								<a class="dropdown-item" href="#" onclick="exportTemplate()">导出模板</a>-->
+<!--								<a class="dropdown-item" href="expin.html">excle导入数据</a>-->
+<!--								<a class="dropdown-item" href="record_fin.html">手动录入</a>-->
+<!--							</div>-->
+<!--						</li>-->
+
+<!--						<li class="nav-item dropdown">-->
+<!--							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"-->
+<!--							   aria-expanded="false"><span class="ti-key"></span> 仓库数据导入导出</a>-->
+<!--							<div class="dropdown-menu">-->
+<!--								<a class="dropdown-item" href="#" onclick="exportTemplate(2)">导出仓库模板</a>-->
+<!--								<a class="dropdown-item" href="depository.html">导入仓库数据</a>-->
+<!--								<a class="dropdown-item" href="depository_fin.html">手动录入仓库信息</a>-->
+<!--							</div>-->
+<!--						</li>-->
 
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-							   aria-expanded="false"><span class="ti-key"></span> 仓库数据导入导出</a>
+							   aria-expanded="false"><span class="ti-key"></span> 客户数据录入</a>
 							<div class="dropdown-menu">
-								<a class="dropdown-item" href="#" onclick="exportTemplate(2)">导出仓库模板</a>
-								<a class="dropdown-item" href="depository.html">导入仓库数据</a>
-								<a class="dropdown-item" href="depository_fin.html">手动录入仓库信息</a>
-							</div>
-						</li>
-
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-							   aria-expanded="false"><span class="ti-key"></span> 客户数据导入导出</a>
-							<div class="dropdown-menu">
-								<a class="dropdown-item" href="#" onclick="exportTemplate(3)">导出客户模板</a>
-								<a class="dropdown-item" href="cus.html">导入客户数据</a>
-								<a class="dropdown-item" href="cus_fin.html">手动录入客户信息</a>
+<!--								<a class="dropdown-item" href="#" onclick="exportTemplate(3)">导出客户模板</a>-->
+<!--								<a class="dropdown-item" href="cus.html">导入客户数据</a>-->
+								<a class="dropdown-item" href="cus2.html">客户列表</a>
+								<a class="dropdown-item" href="cus_fin2.html">手动录入客户信息</a>
 							</div>
 						</li>
 
@@ -195,7 +196,7 @@
 										<span class="ti-home"></span>
 									</a>
 								</li>
-								<li class="breadcrumb-item">药品数据导入导出</li>
+								<li class="breadcrumb-item">客户数据导入导出</li>
 								<li class="breadcrumb-item active">手动录入</li>
 							</ol>
 						</div>
@@ -211,68 +212,31 @@
 					<!-- Widget Item -->
 					<div class="col-md-12">
 						<div class="widget-area-2 lochana-box-shadow">
-<!--							<h3 class="widget-title">药品批次数据录入</h3>-->
+							<h3 class="widget-title">录入客户数据</h3>
 							<form>
 								<div class="form-row">
 									<div class="form-group col-md-6">
-										<label for="name">药品名称</label>
-										<input  type="text" class="form-control" placeholder="请输入药品名称" id="name">
-									</div>
-									<div class="form-group col-md-6">
-										<label for="beach_num">药品批号</label>
-										<input  type="text" class="form-control" placeholder="请输入药品批号" id="beach_num">
-									</div>
-									<div class="form-group col-md-6">
-										<label for="depositoryName">所属商业公司</label>
-										<select  type="text" class="form-control" id="depositoryName">
-
-										</select>
+										<label for="name">客户名称</label>
+										<input  type="text" class="form-control" placeholder="请输入客户名称" id="name">
 									</div>
 
 									<div class="form-group col-md-6">
-										<label for="amount">入库数量</label>
-										<input  type="text" placeholder="请输入入库数量" class="form-control" id="amount">
-									</div>
-									<div class="form-group col-md-6">
-										<label for="type">规格</label>
-										<input  type="text" placeholder="请输入规格" class="form-control" id="type">
-									</div>
-									<div class="form-group col-md-6">
-										<label for="type2">包装量</label>
-										<input  type="text" placeholder="请输入包装量" class="form-control" id="type2">
+										<label for="phone">客户电话</label>
+										<input  type="text" class="form-control" placeholder="请输入客户电话" id="phone">
 									</div>
 
 									<div class="form-group col-md-6">
-										<label for="prize">单价</label>
-										<input  type="text" placeholder="请输入单价" class="form-control" id="prize">
+										<label for="cusName">客户负责人</label>
+										<input  type="text" class="form-control" placeholder="请输入客户负责人名称" id="cusName">
 									</div>
 
 									<div class="form-group col-md-6">
-										<label for="liter">单位</label>
-										<input  type="text" placeholder="请输入单位" class="form-control" id="liter">
-									</div>
+										<label for="address">客户地址</label>
+										<input  type="text" class="form-control" placeholder="请输入客户地址" id="address">
 
-									<div class="form-group col-md-6">
-										<label for="product">生产厂家</label>
-										<input  type="text" placeholder="请输入生产厂家" class="form-control" id="product">
-									</div>
-
-									<div class="form-group col-md-6">
-										<label for="privide">供应商</label>
-										<input  type="text" placeholder="请输入供应商" class="form-control" id="privide">
-									</div>
-
-									<div class="form-group col-md-6">
-										<label for="startTime">生产日期</label>
-										<input  type="datetime-local" class="form-control" id="startTime">
-									</div>
-
-									<div class="form-group col-md-6">
-										<label for="endTime">有效期至</label>
-										<input  type="datetime-local"  class="form-control" id="endTime">
 									</div>
 									<div class="form-group col-md-6">
-										<button type="button" class="btn btn-primary btn-lg" onclick="subInfo()">提交</button>
+										<button type="button" class="btn btn-primary btn-lg" onclick="subInfomation()">提交</button>
 									</div>
 								</div>
 							</form>
@@ -314,83 +278,57 @@
 </body>
 <script>
 
-	window.onload=initData;
-	function initData(){
+
+
+	function subInfomation(){
+		const name = $("#name").val();
+		const phone = $("#phone").val();
+		const address = $("#address").val();
+		const cusName = $("#cusName").val();
+
+		if(name==''){
+			alert("请输入客户名称！");
+			return false;
+				}
+
+		if(phone==''){
+			alert("请输入客户电话！");
+			return false;
+		}
+		if(address==''){
+			alert("请输入客户地址！");
+			return false;
+		}
+		if(cusName==''){
+			alert("请输入负责人名称！");
+			return false;
+		}
 		$.ajax({
 			type:"post",
-			url:baseUrl+"depository/list",
+			url:baseUrl+"/cus/saveCus",
+			data:{"name":name,"phone":phone,"address":address,"cusName":cusName},
 			dataType:"json",
 			xhrFields:{withCredentials:true},
 			contentType: "application/x-www-form-urlencoded",
 			async:false,
-			// data:{amount:amount,type:type,type2:type2,prize:prize,liter:liter,name:name,product:product,privide:privide,award:award},
-			success:function (data){
-				if(data.success){
-					var html = "";
-					html +="<option value=''>请选择药品批次录入的仓库</option>";
-					for(var i = 0 ; i < data.data.length ; i++){
-						html += "<option value='"+data.data[i].id+"'>"+data.data[i].name+"</option>";
-					}
-					$("#depositoryName").append(html)
-				}
-			},
 			beforeSend:function (request){
 				request.setRequestHeader("token",userId);
-			}
-		});
-	}
-
-
-
-
-	function subInfo(){
-		var beach_num = $("#beach_num").val();
-		var depositoryId = $("#depositoryName option:selected").val();
-		var depositoryName = $("#depositoryName option:selected").text();
-		var startTime = $("#startTime").val();
-		var endTime = $("#endTime").val();
-		var amount = $("#amount").val();
-		var type = $("#type").val();
-		var type2 = $("#type2").val();
-		var prize = $("#prize").val();
-		var liter = $("#liter").val();
-		var name = $("#name").val();
-		var product = $("#product").val();
-		var privide = $("#privide").val();
-		var award = $("#award").val();
-		var start = new Date(startTime);
-		var end = new Date(endTime);
-
-		if(amount==""||type==""||type2==""||prize==""||liter==""||name==""||product==""||privide==""||award==""||beach_num==""||depositoryId==""||depositoryName==""||startTime==""||endTime==""){
-			alert("页面所有元素都不能为空，请继续填写！");
-			return false;
-		}
-		if (start.getTime()>end.getTime()){
-			alert("结束日期不能再开始日期之后");
-			return false;
-		}
-		$.ajax({
-			type:"get",
-			url:baseUrl+"order/saveMerchandise",
-			data:{amount:amount,type:type,type2:type2,prize:prize,liter:liter,name:name,product:product,privide:privide,award:award,beach_num:beach_num,depositoryId:depositoryId,depositoryName:depositoryName,endTime:end,startTime:start},
-			dataType:"json",
-			xhrFields:{withCredentials:true},
-			contentType: "application/x-www-form-urlencoded",
-			async:false,
+			},
 			success:function (data){
 				if(data.success){
 					alert("保存成功！");
-					location.href ='expin.html';
+					location.href="cus2.html";
 				}
-			},
-			beforeSend:function (request){
-				request.setRequestHeader("token",userId);
 			}
 		});
-
-
-
 	}
+
+	// function ValnotNull(name){
+	// 	if(name==""||name="请输入仓库名称"){
+	// 			alert("页面所有元素都不能为空，请继续填写！");
+	// 			return false;
+	// 	}
+	// }
 
 
 
