--- a/sys/orders2.html
+++ b/sys/orders2.html
@@ -63,7 +63,7 @@
 		<div class="container top-brand">
 			<nav class="navbar navbar-default">
 				<div class="navbar-header">
-					<div class="sidebar-header"> <a href="main.html"><img src="images/logo-dark.png" class="logo" alt="logo"></a>
+					<div class="sidebar-header"> <a href="main2.html"><img src="images/logo-dark.png" class="logo" alt="logo"></a>
 					</div>
 				</div>
 				<ul class="nav justify-content-end">
@@ -81,12 +81,12 @@
 							<h5>订单通知</h5>
 							<!--								<a class="dropdown-item" href="#" onclick="">-->
 							<!--									<span class="ti-wheelchair"></span> 新消息</a>-->
-							<a class="dropdown-item" href="his-orders.html">
-								<span class="ti-money"></span> 订单信息</a>
-<!--							<a class="dropdown-item" href="ing-orders.html">-->
-<!--								<span class="ti-time"></span>在途订单</a>-->
-<!--							<a class="dropdown-item" href="cre-orders.html">-->
-<!--								<span class="ti-wheelchair"></span> 未安排订单</a>-->
+<!--							<a class="dropdown-item" href="his-orders.html">-->
+<!--								<span class="ti-money"></span> 订单信息</a>-->
+							<!--							<a class="dropdown-item" href="ing-orders.html">-->
+							<!--								<span class="ti-time"></span>在途订单</a>-->
+							<!--							<a class="dropdown-item" href="cre-orders.html">-->
+							<!--								<span class="ti-wheelchair"></span> 未安排订单</a>-->
 						</div>
 					</li>
 					<li class="nav-item">
@@ -123,69 +123,77 @@
 							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
 							   aria-expanded="false"><span class="ti-home"></span> 主页</a>
 							<div class="dropdown-menu">
-								<a class="dropdown-item" href="main.html">回到主页</a>
-							</div>
-						</li>
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-							   aria-expanded="false"><span class="ti-user"></span> 人员管理</a>
-							<div class="dropdown-menu">
-								<a class="dropdown-item" href="add-user.html">添加用户信息</a>
-								<a class="dropdown-item" href="users.html">管理用户信息</a>
-								<a class="dropdown-item" href="edit-user.html">编辑我的个人信息</a>
-							</div>
-						</li>
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-							   aria-expanded="false"><span class="ti-pencil-alt"></span> 订单管理</a>
-							<div class="dropdown-menu">
-<!--								<a class="dropdown-item" href="#" onclick="exportTemplate(4)">导出订单模板</a>-->
-								<a class="dropdown-item" href="add-order.html">添加采购订单</a>
-								<a class="dropdown-item" href="orders.html">订单列表</a>
-								<a class="dropdown-item" href="his-orders.html">订单信息展示及导出</a>
-<!--								<a class="dropdown-item" href="ing-orders.html">在途订单信息</a>-->
-<!--								<a class="dropdown-item" href="cre-orders.html">未发货订单信息</a>-->
+								<a class="dropdown-item" href="main2.html">回到主页</a>
 							</div>
 						</li>
 <!--						<li class="nav-item dropdown">-->
 <!--							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"-->
-<!--							   aria-expanded="false"><span class="ti-money"></span> 统计及其他</a>-->
+<!--							   aria-expanded="false"><span class="ti-user"></span> 人员管理</a>-->
 <!--							<div class="dropdown-menu">-->
-<!--								<a class="dropdown-item" href="payment-year.html">收入对比统计</a>-->
-<!--								<a class="dropdown-item" href="payment-quart.html">客户列表</a>-->
-<!--								&lt;!&ndash;								<a class="dropdown-item" href="payment-month.html">月度统计</a>&ndash;&gt;-->
+<!--								<a class="dropdown-item" href="add-user.html">添加用户信息</a>-->
+<!--								<a class="dropdown-item" href="users.html">管理用户信息</a>-->
+<!--								<a class="dropdown-item" href="edit-user.html">编辑我的个人信息</a>-->
 <!--							</div>-->
 <!--						</li>-->
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-							   aria-expanded="false"><span class="ti-key"></span> 药品数据导入导出</a>
+							   aria-expanded="false"><span class="ti-pencil-alt"></span> 订单管理</a>
 							<div class="dropdown-menu">
-								<a class="dropdown-item" href="#" onclick="exportTemplate()">导出模板</a>
-								<a class="dropdown-item" href="expin.html">excle导入数据</a>
-								<a class="dropdown-item" href="record_fin.html">手动录入</a>
+								<!--								<a class="dropdown-item" href="#" onclick="exportTemplate(4)">导出订单模板</a>-->
+								<a class="dropdown-item" href="add-order2.html">添加采购订单</a>
+								<a class="dropdown-item" href="orders2.html">订单列表</a>
+<!--								<a class="dropdown-item" href="his-orders.html">订单信息展示及导出</a>-->
+								<!--								<a class="dropdown-item" href="ing-orders.html">在途订单信息</a>-->
+								<!--								<a class="dropdown-item" href="cre-orders.html">未发货订单信息</a>-->
 							</div>
 						</li>
+						<!--						<li class="nav-item dropdown">-->
+						<!--							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"-->
+						<!--							   aria-expanded="false"><span class="ti-money"></span> 统计及其他</a>-->
+						<!--							<div class="dropdown-menu">-->
+						<!--								<a class="dropdown-item" href="payment-year.html">收入对比统计</a>-->
+						<!--								<a class="dropdown-item" href="payment-quart.html">客户列表</a>-->
+						<!--								&lt;!&ndash;								<a class="dropdown-item" href="payment-month.html">月度统计</a>&ndash;&gt;-->
+						<!--							</div>-->
+						<!--						</li>-->
+<!--						<li class="nav-item dropdown">-->
+<!--							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"-->
+<!--							   aria-expanded="false"><span class="ti-key"></span> 药品数据导入导出</a>-->
+<!--							<div class="dropdown-menu">-->
+<!--								<a class="dropdown-item" href="#" onclick="exportTemplate()">导出模板</a>-->
+<!--								<a class="dropdown-item" href="expin.html">excle导入数据</a>-->
+<!--								<a class="dropdown-item" href="record_fin.html">手动录入</a>-->
+<!--							</div>-->
+<!--						</li>-->
 
+<!--						<li class="nav-item dropdown">-->
+<!--							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"-->
+<!--							   aria-expanded="false"><span class="ti-key"></span> 仓库数据导入导出</a>-->
+<!--							<div class="dropdown-menu">-->
+<!--								<a class="dropdown-item" href="#" onclick="exportTemplate(2)">导出仓库模板</a>-->
+<!--								<a class="dropdown-item" href="depository.html">导入仓库数据</a>-->
+<!--								<a class="dropdown-item" href="depository_fin.html">手动录入仓库信息</a>-->
+<!--							</div>-->
+<!--						</li>-->
+
+<!--						<li class="nav-item dropdown">-->
+<!--							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"-->
+<!--							   aria-expanded="false"><span class="ti-key"></span> 客户数据导入导出</a>-->
+<!--							<div class="dropdown-menu">-->
+<!--								<a class="dropdown-item" href="#" onclick="exportTemplate(3)">导出客户模板</a>-->
+<!--								<a class="dropdown-item" href="cus.html">导入客户数据</a>-->
+<!--								<a class="dropdown-item" href="cus_fin.html">手动录入客户信息</a>-->
+<!--							</div>-->
+<!--						</li>-->
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-							   aria-expanded="false"><span class="ti-key"></span> 仓库数据导入导出</a>
+							   aria-expanded="false"><span class="ti-key"></span> 客户数据录入</a>
 							<div class="dropdown-menu">
-								<a class="dropdown-item" href="#" onclick="exportTemplate(2)">导出仓库模板</a>
-								<a class="dropdown-item" href="depository.html">导入仓库数据</a>
-								<a class="dropdown-item" href="depository_fin.html">手动录入仓库信息</a>
+								<!--								<a class="dropdown-item" href="#" onclick="exportTemplate(3)">导出客户模板</a>-->
+								<a class="dropdown-item" href="cus2.html">客户列表</a>
+								<a class="dropdown-item" href="cus_fin2.html">手动录入客户信息</a>
 							</div>
 						</li>
-
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-							   aria-expanded="false"><span class="ti-key"></span> 客户数据导入导出</a>
-							<div class="dropdown-menu">
-								<a class="dropdown-item" href="#" onclick="exportTemplate(3)">导出客户模板</a>
-								<a class="dropdown-item" href="cus.html">导入客户数据</a>
-								<a class="dropdown-item" href="cus_fin.html">手动录入客户信息</a>
-							</div>
-						</li>
-
 					</ul>
 				</div>
 			</nav>
@@ -201,7 +209,7 @@
 				<div class="col-md-6">
 					<ol class="breadcrumb">
 						<li class="breadcrumb-item">
-							<a href="index.html">
+							<a href="#">
 								<span class="ti-home"></span>
 							</a>
 						</li>
@@ -220,11 +228,11 @@
 				<!-- Widget Item -->
 				<div class="col-md-12">
 					<div class="widget-area-2 lochana-box-shadow">
-<!--						<h3 class="widget-title">订单列表</h3>-->
-<!--						<form  method="post" enctype="multipart/form-data">-->
-<!--							<input type="file" id="upfile" name="upfile">-->
-<!--							<input type="button" value = "上传文件" onclick="subFile()">-->
-<!--						</form>-->
+						<!--						<h3 class="widget-title">订单列表</h3>-->
+						<!--						<form  method="post" enctype="multipart/form-data">-->
+						<!--							<input type="file" id="upfile" name="upfile">-->
+						<!--							<input type="button" value = "上传文件" onclick="subFile()">-->
+						<!--						</form>-->
 						<div class="table-responsive mb-3">
 							<table id="tableId" class="table table-bordered table-striped">
 								<!--                                    <tbody id="tb">-->
@@ -260,9 +268,9 @@
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
 					&times;
 				</button>
-<!--				<h4 class="modal-title" id="myModalLabel">-->
-<!--					订单明细-->
-<!--				</h4>-->
+				<!--				<h4 class="modal-title" id="myModalLabel">-->
+				<!--					订单明细-->
+				<!--				</h4>-->
 			</div>
 			<div class="modal-body" >
 				<table id="detail" style="width: 100%">
@@ -272,9 +280,9 @@
 			<div class="modal-footer">
 				<button type="button" class="btn btn-dark" data-dismiss="modal">关闭
 				</button>
-<!--				<button type="button" class="btn btn-primary">-->
-<!--					提交更改-->
-<!--				</button>-->
+				<!--				<button type="button" class="btn btn-primary">-->
+				<!--					提交更改-->
+				<!--				</button>-->
 			</div>
 		</div><!-- /.modal-content -->
 	</div><!-- /.modal -->
@@ -430,7 +438,7 @@
 						var html ="";
 						// html+="<input type='button' onclick='editOne("+data+")' value='修改'></input>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;";
 						html+="<input type='button'  class='btn-danger btn' onclick='deleteInfo(\""+data+"\")' value='删除订单' /></br>";
-						html+="<input type='button' class='btn-dark btn' onclick='pubInfo(\""+data+"\")' value='订单发货' /></br>";
+						// html+="<input type='button' class='btn-dark btn' onclick='pubInfo(\""+data+"\")' value='订单发货' /></br>";
 						html+="<input type='button'  class='btn-primary btn' data-toggle=\"modal\" data-target=\"#myModal\"  onclick='showdetail(\""+data+"\")' value='显示订单明细' />";
 						return html;
 					}},
@@ -441,7 +449,7 @@
 				if(data.address.length > 3){//只有超长，才有td点击事件
 					$(row).children('td').eq(3).attr('onclick','javascript:changeShowRemarks(this);');
 				}
-					$(row).children('td').eq(3).attr('content',data.address);
+				$(row).children('td').eq(3).attr('content',data.address);
 				if(data.id.length > 6){//只有超长，才有td点击事件
 					$(row).children('td').eq(0).attr('onclick','javascript:changeShowRemarks(this);');
 				}
@@ -486,6 +494,13 @@
 			]
 		});
 	}
+
+	// var det = $('#detail').DataTable();
+	// $('#detail tbody').on( 'click', 'tr', function () {
+	// 	// console.log( table.row( this ).data() );
+	//
+	// } );
+
 
 
 	function pubInfo(id){
@@ -557,15 +572,15 @@
 
 	function payBgn(id,state,pjc){
 		$.ajax({
-		url: baseUrl+"order/unPay",
-		type:"get",
-		data:{id:id,state:state,pjc:pjc},
-		success:function (data){
-			if(data.success){
-				window.location.href="orders.html";
+			url: baseUrl+"order/unPay",
+			type:"get",
+			data:{id:id,state:state,pjc:pjc},
+			success:function (data){
+				if(data.success){
+					window.location.href="orders.html";
+				}
 			}
-		}
-	});
+		});
 	}
 
 	function payment(id){
@@ -643,7 +658,7 @@
 			"bLengthChange":false,
 			"edit":false,
 			"bFilter":false,
-			"bSort":true,
+			"bSort":false,
 			"bAutoWidth": true,
 			language: {
 				"sProcessing": "处理中...",
@@ -677,10 +692,10 @@
 				{"sTitle":"药名", "mDataProp": "merchName","sClass": "center", "bSortable": false, "sWidth": "200",editable:true},
 				{"sTitle":"数量", "mDataProp": "count","sClass": "center", "bSortable": false, "sWidth": "200",editable:true,
 					'createdCell': function(nTd, sData, oData, iRow, iCol){
-						var prise = oData.sallAmount;
-						var id = oData.id;
-						var count = oData.count;
-						$(nTd).dblclick(
+					var prise = oData.sallAmount;
+					var id = oData.id;
+					var count = oData.count;
+					$(nTd).dblclick(
 								function(){
 									var td = $(this);
 									// 根据表格文本创建文本框 并加入表表中--文本框的样式自己调整
@@ -759,7 +774,8 @@
 					}},
 				{"sTitle":"已开票数", "mDataProp": "pjc","sClass": "center", "bSortable": false, "sWidth": "200"},
 				{"sTitle":"已回款数", "mDataProp": "moneyCount","sClass": "center", "bSortable": false, "sWidth": "200"},
-				{"sTitle":"单价", "mDataProp": "sallAmount","sClass": "center", "bSortable": false, "sWidth": "200",'createdCell': function(nTd, sData, oData, iRow, iCol){
+				{"sTitle":"单价", "mDataProp": "sallAmount","sClass": "center", "bSortable": false, "sWidth": "200",
+					'createdCell': function(nTd, sData, oData, iRow, iCol){
 						// var prise = oData.sallAmount;
 						var id = oData.id;
 						var sallAmount = oData.sallAmount;
@@ -782,7 +798,10 @@
 												$(this).remove();
 												td.text(newText);
 												var amount = parseFloat(newText)*parseInt(count);
+												// $('#detail').DataTable().destroy()
+												$('#detail').DataTable().data()[iRow].amount = amount;
 												window.location.href="orders2.html";
+												// $('#detail').DataTable().ajax.url(baseUrl+"/option/getOrderByOrderId").load();
 											}
 										});
 										// showdetail();
@@ -796,16 +815,17 @@
 
 						);
 						$(nTd).attr('title','双击可修改');
-					}},
+					}
+				},
 				{"sTitle":"总价", "mDataProp": "amount","sClass": "center", "bSortable": false, "sWidth": "200"},
 				{"sTitle":"操作", "mDataProp": "id","sClass": "center", "bSortable": false, "sWidth": "100",mRender:function (data,cell){
 						var html ="";
 						// html+="<input type='button' onclick='editOne("+data+")' value='修改'></input>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;";
 						html+="<input type='button' class='btn-danger btn' onclick='deleteSonInfo(\""+data+"\")' value='删除子订单' /></br>";
-						html+="<input type='button' class='btn-success btn' onclick='allPay(\""+data+"\")' value='开全款票据' /></br>";
-						html+="<input type='button' class='btn-dark btn'  data-toggle=\"modal\" data-target=\"#payModel\"   onclick='unPay(\""+data+"\")' value='开非全款票据' /></br>";
-						html+="<input type='button' class='btn-primary btn' onclick='payment(\""+data+"\")' value='已收全款' /></br>";
-						html+="<input type='button'  class='btn-dark btn' data-toggle=\"modal\" data-target=\"#moneyModel\"  onclick='unpayment(\""+data+"\")' value='部分收款' /><hr/>";
+						// html+="<input type='button' class='btn-success btn' onclick='allPay(\""+data+"\")' value='开全款票据' /></br>";
+						// html+="<input type='button' class='btn-dark btn'  data-toggle=\"modal\" data-target=\"#payModel\"   onclick='unPay(\""+data+"\")' value='开非全款票据' /></br>";
+						// html+="<input type='button' class='btn-primary btn' onclick='payment(\""+data+"\")' value='已收全款' /></br>";
+						// html+="<input type='button'  class='btn-dark btn' data-toggle=\"modal\" data-target=\"#moneyModel\"  onclick='unpayment(\""+data+"\")' value='部分收款' /><hr/>";
 						return html;
 					}},
 			],"createdRow": function( row, data, dataIndex ) {
@@ -858,7 +878,7 @@
 
 
 			]
-	});
+		});
 	}
 
 
