--- a/sys/users.html
+++ b/sys/users.html
@@ -40,9 +40,9 @@
 <!--/Pre Loader -->
 <!-- Color Changer -->
 <div class="theme-settings" id="switcher">
-		<span class="theme-click">
-			<span class="ti-settings"></span>
-		</span>
+<!--		<span class="theme-click">-->
+<!--			<span class="ti-settings"></span>-->
+<!--		</span>-->
 	<span class="theme-color theme-default theme-active" data-color="green"></span>
 	<span class="theme-color theme-blue" data-color="blue"></span>
 	<span class="theme-color theme-red" data-color="red"></span>
@@ -76,11 +76,11 @@
 							<!--								<a class="dropdown-item" href="#" onclick="">-->
 							<!--									<span class="ti-wheelchair"></span> 新消息</a>-->
 							<a class="dropdown-item" href="his-orders.html">
-								<span class="ti-money"></span> 已收款订单</a>
-							<a class="dropdown-item" href="ing-orders.html">
-								<span class="ti-time"></span>在途订单</a>
-							<a class="dropdown-item" href="cre-orders.html">
-								<span class="ti-wheelchair"></span> 未安排订单</a>
+								<span class="ti-money"></span> 订单信息</a>
+<!--							<a class="dropdown-item" href="ing-orders.html">-->
+<!--								<span class="ti-time"></span>在途订单</a>-->
+<!--							<a class="dropdown-item" href="cre-orders.html">-->
+<!--								<span class="ti-wheelchair"></span> 未安排订单</a>-->
 						</div>
 					</li>
 					<li class="nav-item">
@@ -133,23 +133,23 @@
 							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
 							   aria-expanded="false"><span class="ti-pencil-alt"></span> 订单管理</a>
 							<div class="dropdown-menu">
-								<a class="dropdown-item" href="#" onclick="exportTemplate(4)">导出订单模板</a>
+<!--								<a class="dropdown-item" href="#" onclick="exportTemplate(4)">导出订单模板</a>-->
 								<a class="dropdown-item" href="add-order.html">添加采购订单</a>
 								<a class="dropdown-item" href="orders.html">订单列表</a>
-								<a class="dropdown-item" href="his-orders.html">已完成订单信息</a>
-								<a class="dropdown-item" href="ing-orders.html">在途订单信息</a>
-								<a class="dropdown-item" href="cre-orders.html">未发货订单信息</a>
+								<a class="dropdown-item" href="his-orders.html">订单信息展示及导出</a>
+<!--								<a class="dropdown-item" href="ing-orders.html">在途订单信息</a>-->
+<!--								<a class="dropdown-item" href="cre-orders.html">未发货订单信息</a>-->
 							</div>
 						</li>
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-							   aria-expanded="false"><span class="ti-money"></span> 统计及其他</a>
-							<div class="dropdown-menu">
-								<a class="dropdown-item" href="payment-year.html">收入对比统计</a>
-								<a class="dropdown-item" href="payment-quart.html">客户列表</a>
-								<!--								<a class="dropdown-item" href="payment-month.html">月度统计</a>-->
-							</div>
-						</li>
+<!--						<li class="nav-item dropdown">-->
+<!--							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"-->
+<!--							   aria-expanded="false"><span class="ti-money"></span> 统计及其他</a>-->
+<!--							<div class="dropdown-menu">-->
+<!--								<a class="dropdown-item" href="payment-year.html">收入对比统计</a>-->
+<!--								<a class="dropdown-item" href="payment-quart.html">客户列表</a>-->
+<!--								&lt;!&ndash;								<a class="dropdown-item" href="payment-month.html">月度统计</a>&ndash;&gt;-->
+<!--							</div>-->
+<!--						</li>-->
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
 							   aria-expanded="false"><span class="ti-key"></span> 药品数据导入导出</a>
@@ -207,7 +207,7 @@
 					<!-- Widget Item -->
 					<div class="col-md-12">
 						<div class="widget-area-2 lochana-box-shadow">
-							<h3 class="widget-title">用户列表  <button type="button" className="btn btn-primary"><span className="ti-pencil-alt" onclick="tz()">添加用户</span> </button></h3>
+							<h3 class="widget-title">  <button  class="btn btn-primary" onclick="tz()">添加用户</button></h3>
 							<div class="table-responsive mb-3">
 								<table id="tableId" class="table table-bordered table-striped">
 									<thead>
@@ -271,8 +271,8 @@
 					for(var i = 0;i < list.length ; i++){
 						var medicalAdmin = list[i];
 						var id = medicalAdmin.id;
-						html += "<tr><td>"+medicalAdmin.id+"</td><td>"+medicalAdmin.name+"</td><td>"+medicalAdmin.account+"</td><td>"+medicalAdmin.pwd+"</td><td>"+medicalAdmin.phone+"</td><td>"+medicalAdmin.role?.replace("0","普通员工").replace("1","管理员")+"</td><td><button type='button' className='btn btn-danger' id='delbtn' onclick=deleteUser('"+id+"')><span className='ti-trash'></span> 删除 </button>"+
-								"&nbsp;&nbsp;&nbsp;<button type='button' className='btn btn-primary' onclick=editUser('"+id+"')><span className='ti-pencil-alt'></span> 编辑</button></td></tr>";
+						html += "<tr><td>"+medicalAdmin.id+"</td><td>"+medicalAdmin.name+"</td><td>"+medicalAdmin.account+"</td><td>"+medicalAdmin.pwd+"</td><td>"+medicalAdmin.phone+"</td><td>"+medicalAdmin.role?.replace("0","普通员工").replace("1","管理员")+"</td><td><button type='button' class='btn btn-danger' id='delbtn' onclick=deleteUser('"+id+"')><span class='ti-trash'></span> 删除 </button>"+
+								"&nbsp;&nbsp;&nbsp;<button type='button' class='btn btn-primary' onclick=editUser('"+id+"')><span class='ti-pencil-alt'></span> 编辑</button></td></tr>";
 					}
 					$("#tb").append(html);
 				}
