--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 <div class="login-form">
 			<div class="top-login">
-				<span><img src="images/group.png" alt="" style="margin-left: 10px;margin-top: 30px;"/></span>
+				<span><img src="images/group.png" alt="" style="margin-left: 19px;margin-top: 27px;"/></span>
 			</div>
 			<h1 style="text-decoration: none;">库存管理系统</h1>
 			<div class="login-top">
@@ -71,7 +71,11 @@
 							storage.setItem("name",data.data.name); //第三种存储方式，推荐使用
 							storage.setItem("role",data.data.role); //第三种存储方式，推荐使用
 							//跳转页面
-							window.location.href="sys/main.html";
+							if(data.data.role=='1'){
+								window.location.href="sys/main.html";
+							}else{
+								window.location.href="sys/main2.html";
+							}
 						}else {
 							jsWindow("登录错误",$("#sub"),0);
 						}
