--- a/sys/cus2.html
+++ b/sys/cus2.html
@@ -22,29 +22,7 @@
 
 	<script src="js/modernizr.min.js"></script>
 	<style>
-		.file {
-			position: relative;
-			text-decoration: none;
-			text-indent: 0;
-			line-height: 20px;
-			float: left;
-			width: 23px;
-			height: 18px;
-			margin-left: 10px;
-		}
-		.file input {
-			position: absolute;
-			font-size: 100px;
-			right: 0;
-			top: 0;
-			opacity: 0;
-			width: 23px;
-			height: 18px;
-			margin-left: 10px;
-		}
-		.file:hover {
-			text-decoration: none;
-		}
+
 	</style>
 </head>
 
@@ -76,7 +54,7 @@
 		<div class="container top-brand">
 			<nav class="navbar navbar-default">
 				<div class="navbar-header">
-					<div class="sidebar-header"> <a href="main.html"><img src="images/logo-dark.png" class="logo" alt="logo"></a>
+					<div class="sidebar-header"> <a href="main2.html"><img src="images/logo-dark.png" class="logo" alt="logo"></a>
 					</div>
 				</div>
 				<ul class="nav justify-content-end">
@@ -136,26 +114,26 @@
 							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
 							   aria-expanded="false"><span class="ti-home"></span> 主页</a>
 							<div class="dropdown-menu">
-								<a class="dropdown-item" href="main.html">回到主页</a>
+								<a class="dropdown-item" href="main2.html">回到主页</a>
 							</div>
 						</li>
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-							   aria-expanded="false"><span class="ti-user"></span> 人员管理</a>
-							<div class="dropdown-menu">
-								<a class="dropdown-item" href="add-user.html">添加用户信息</a>
-								<a class="dropdown-item" href="users.html">管理用户信息</a>
-								<a class="dropdown-item" href="edit-user.html">编辑我的个人信息</a>
-							</div>
-						</li>
+<!--						<li class="nav-item dropdown">-->
+<!--							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"-->
+<!--							   aria-expanded="false"><span class="ti-user"></span> 人员管理</a>-->
+<!--							<div class="dropdown-menu">-->
+<!--								<a class="dropdown-item" href="add-user.html">添加用户信息</a>-->
+<!--								<a class="dropdown-item" href="users.html">管理用户信息</a>-->
+<!--								<a class="dropdown-item" href="edit-user.html">编辑我的个人信息</a>-->
+<!--							</div>-->
+<!--						</li>-->
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
 							   aria-expanded="false"><span class="ti-pencil-alt"></span> 订单管理</a>
 							<div class="dropdown-menu">
 <!--								<a class="dropdown-item" href="#" onclick="exportTemplate(4)">导出订单模板</a>-->
-								<a class="dropdown-item" href="add-order.html">添加采购订单</a>
-								<a class="dropdown-item" href="orders.html">订单列表</a>
-								<a class="dropdown-item" href="his-orders.html">订单信息展示及导出</a>
+								<a class="dropdown-item" href="add-order2.html">添加采购订单</a>
+								<a class="dropdown-item" href="orders2.html">订单列表</a>
+<!--								<a class="dropdown-item" href="his-orders.html">订单信息展示及导出</a>-->
 <!--								<a class="dropdown-item" href="ing-orders.html">在途订单信息</a>-->
 <!--								<a class="dropdown-item" href="cre-orders.html">未发货订单信息</a>-->
 							</div>
@@ -169,33 +147,33 @@
 <!--								&lt;!&ndash;								<a class="dropdown-item" href="payment-month.html">月度统计</a>&ndash;&gt;-->
 <!--							</div>-->
 <!--						</li>-->
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-							   aria-expanded="false"><span class="ti-key"></span> 药品数据导入导出</a>
-							<div class="dropdown-menu">
-								<a class="dropdown-item" href="#" onclick="exportTemplate()">导出模板</a>
-								<a class="dropdown-item" href="expin.html">excle导入数据</a>
-								<a class="dropdown-item" href="record_fin.html">手动录入</a>
-							</div>
-						</li>
+<!--						<li class="nav-item dropdown">-->
+<!--							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"-->
+<!--							   aria-expanded="false"><span class="ti-key"></span> 药品数据导入导出</a>-->
+<!--							<div class="dropdown-menu">-->
+<!--								<a class="dropdown-item" href="#" onclick="exportTemplate()">导出模板</a>-->
+<!--								<a class="dropdown-item" href="expin.html">excle导入数据</a>-->
+<!--								<a class="dropdown-item" href="record_fin.html">手动录入</a>-->
+<!--							</div>-->
+<!--						</li>-->
+
+<!--						<li class="nav-item dropdown">-->
+<!--							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"-->
+<!--							   aria-expanded="false"><span class="ti-key"></span> 仓库数据导入导出</a>-->
+<!--							<div class="dropdown-menu">-->
+<!--								<a class="dropdown-item" href="#" onclick="exportTemplate(2)">导出仓库模板</a>-->
+<!--								<a class="dropdown-item" href="depository.html">导入仓库数据</a>-->
+<!--								<a class="dropdown-item" href="depository_fin.html">手动录入仓库信息</a>-->
+<!--							</div>-->
+<!--						</li>-->
 
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-							   aria-expanded="false"><span class="ti-key"></span> 仓库数据导入导出</a>
+							   aria-expanded="false"><span class="ti-key"></span> 客户数据录入</a>
 							<div class="dropdown-menu">
-								<a class="dropdown-item" href="#" onclick="exportTemplate(2)">导出仓库模板</a>
-								<a class="dropdown-item" href="depository.html">导入仓库数据</a>
-								<a class="dropdown-item" href="depository_fin.html">手动录入仓库信息</a>
-							</div>
-						</li>
-
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-							   aria-expanded="false"><span class="ti-key"></span> 客户数据导入导出</a>
-							<div class="dropdown-menu">
-								<a class="dropdown-item" href="#" onclick="exportTemplate(3)">导出客户模板</a>
-								<a class="dropdown-item" href="cus.html">导入客户数据</a>
-								<a class="dropdown-item" href="cus_fin.html">手动录入客户信息</a>
+<!--								<a class="dropdown-item" href="#" onclick="exportTemplate(3)">导出客户模板</a>-->
+								<a class="dropdown-item" href="cus2.html">客户列表</a>
+								<a class="dropdown-item" href="cus_fin2.html">手动录入客户信息</a>
 							</div>
 						</li>
 
@@ -236,13 +214,13 @@
 <!--						<h3 class="widget-title">导入数据</h3>-->
 
 						<form  method="post" enctype="multipart/form-data">
-							<span class="file"><i
-									class="ti-export" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;&nbsp;
-								<input type="file" id="upfile" name="upfile">
-								</span>
+<!--							<span class="file"><i-->
+<!--									class="ti-export" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;&nbsp;-->
+<!--								<input type="file" id="upfile" name="upfile">-->
+<!--								</span>-->
 							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-							<input type="button" class="btn-primary btn" value = "上传文件" onclick="subFile()">
-							<a class=" btn btn-primary" onclick="exportFile()">导出数据</a>
+<!--							<input type="button" class="btn-primary btn" value = "上传文件" onclick="subFile()">-->
+<!--							<a class=" btn btn-primary" onclick="exportFile()">导出数据</a>-->
 						</form>
 						<div class="table-responsive mb-3">
 							<table id="tableId" class="table table-bordered table-striped">
@@ -375,7 +353,7 @@
 			},
 			success: function (data) {
 				alert("导入成功！");
-				location.href='cus.html';
+				location.href='cus2.html';
 			},
 			error: function () {
 				alert("导入失败！");
@@ -397,7 +375,7 @@
 			},
 			success: function (data) {
 				alert("删除成功！");
-				location.href = "cus.html";
+				location.href = "cus2.html";
 			},
 			error: function () {
 				alert("删除失败！");
