--- a/sys/his-orders.html
+++ b/sys/his-orders.html
@@ -23,6 +23,9 @@
 	<link rel="stylesheet" href="css/jquery-jvectormap.css">
 
 	<script src="js/modernizr.min.js"></script>
+
+	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
 </head>
 
 <body>
@@ -36,9 +39,9 @@
 <!--/Pre Loader -->
 <!-- Color Changer -->
 <div class="theme-settings" id="switcher">
-		<span class="theme-click">
-			<span class="ti-settings"></span>
-		</span>
+<!--		<span class="theme-click">-->
+<!--			<span class="ti-settings"></span>-->
+<!--		</span>-->
 	<span class="theme-color theme-default theme-active" data-color="green"></span>
 	<span class="theme-color theme-blue" data-color="blue"></span>
 	<span class="theme-color theme-red" data-color="red"></span>
@@ -72,11 +75,11 @@
 							<!--								<a class="dropdown-item" href="#" onclick="">-->
 							<!--									<span class="ti-wheelchair"></span> 新消息</a>-->
 							<a class="dropdown-item" href="his-orders.html">
-								<span class="ti-money"></span> 已收款订单</a>
-							<a class="dropdown-item" href="ing-orders.html">
-								<span class="ti-time"></span>在途订单</a>
-							<a class="dropdown-item" href="cre-orders.html">
-								<span class="ti-wheelchair"></span> 未安排订单</a>
+								<span class="ti-money"></span> 订单信息</a>
+<!--							<a class="dropdown-item" href="ing-orders.html">-->
+<!--								<span class="ti-time"></span>在途订单</a>-->
+<!--							<a class="dropdown-item" href="cre-orders.html">-->
+<!--								<span class="ti-wheelchair"></span> 未安排订单</a>-->
 						</div>
 					</li>
 					<li class="nav-item">
@@ -129,23 +132,23 @@
 							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
 							   aria-expanded="false"><span class="ti-pencil-alt"></span> 订单管理</a>
 							<div class="dropdown-menu">
-								<a class="dropdown-item" href="#" onclick="exportTemplate(4)">导出订单模板</a>
+<!--								<a class="dropdown-item" href="#" onclick="exportTemplate(4)">导出订单模板</a>-->
 								<a class="dropdown-item" href="add-order.html">添加采购订单</a>
 								<a class="dropdown-item" href="orders.html">订单列表</a>
-								<a class="dropdown-item" href="his-orders.html">已完成订单信息</a>
-								<a class="dropdown-item" href="ing-orders.html">在途订单信息</a>
-								<a class="dropdown-item" href="cre-orders.html">未发货订单信息</a>
+								<a class="dropdown-item" href="his-orders.html">订单信息展示及导出</a>
+<!--								<a class="dropdown-item" href="ing-orders.html">在途订单信息</a>-->
+<!--								<a class="dropdown-item" href="cre-orders.html">未发货订单信息</a>-->
 							</div>
 						</li>
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-							   aria-expanded="false"><span class="ti-money"></span> 统计及其他</a>
-							<div class="dropdown-menu">
-								<a class="dropdown-item" href="payment-year.html">收入对比统计</a>
-								<a class="dropdown-item" href="payment-quart.html">客户列表</a>
-								<!--								<a class="dropdown-item" href="payment-month.html">月度统计</a>-->
-							</div>
-						</li>
+<!--						<li class="nav-item dropdown">-->
+<!--							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"-->
+<!--							   aria-expanded="false"><span class="ti-money"></span> 统计及其他</a>-->
+<!--							<div class="dropdown-menu">-->
+<!--								<a class="dropdown-item" href="payment-year.html">收入对比统计</a>-->
+<!--								<a class="dropdown-item" href="payment-quart.html">客户列表</a>-->
+<!--								&lt;!&ndash;								<a class="dropdown-item" href="payment-month.html">月度统计</a>&ndash;&gt;-->
+<!--							</div>-->
+<!--						</li>-->
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
 							   aria-expanded="false"><span class="ti-key"></span> 药品数据导入导出</a>
@@ -186,7 +189,7 @@
 		<div class="container mt-0">
 			<div class="row breadcrumb-bar">
 				<div class="col-md-6">
-					<h3 class="block-title">已完成订单列表 </h3>
+					<h3 class="block-title">订单列表 </h3>
 				</div>
 				<div class="col-md-6">
 					<ol class="breadcrumb">
@@ -209,37 +212,33 @@
 
 			<div class="row">
 				<!-- Widget Item -->
+
 				<div class="col-md-12">
 					<div class="widget-area-2 lochana-box-shadow">
 						<h3 class="widget-title">
-							已完成订单列表  <a href="#" onclick="exportOrder()">导出订单</a></h3>
+							  <a href="#" class="btn btn-primary" onclick="exportOrder()">导出订单</a></h3>
+						<div class="form-row">
+						<div class="form-group col-md-6">
+							<label for="cusName">客户</label>
+							<input class="form-control" id="cusName"  onkeyup="catch_keyword(this.value)" onblur="initData()" />
+						</div>
+						<div class="form-group col-md-6">
+							<label for="cusName">订单状态</label>
+							<select class="custom-select-lg custom-select custom-select-sm" name="state" id="state" onchange="initData()">
+								<option value="">全部状态订单</option>
+								<option value="0">未发货</option>
+								<option value="1">已发货</option>
+								<option value="2">开全票</option>
+								<option value="3">部分开票</option>
+								<option value="4">回全款</option>
+								<option value="5">部分回款</option>
+							</select>
+						</div>
+						</div>
 						<div class="table-responsive mb-3">
-							<table id="tableId" class="table table-bordered table-striped">
-								<thead>
-								<tr>
-									<th class="no-sort">
-										<div class="custom-control custom-checkbox">
-											<input class="custom-control-input" type="checkbox" id="select-all" name="select-all">
-											<label class="custom-control-label" for="select-all"></label>
-										</div>
-									</th>
-									<th>药品名称</th>
-									<th>客户名称</th>
-									<th>配送数量</th>
-									<th>配送状态</th>
-									<th>配送电话</th>
-									<th>配送地址</th>
-									<th>备注</th>
-								</tr>
-								</thead>
-								<tbody id="tb">
-								<tr>
-								</tr>
+							<table id="detail" class="table table-bordered table-striped" width="100%">
 
-								</tbody>
 							</table>
-
-
 						</div>
 					</div>
 				</div>
@@ -266,12 +265,16 @@
 <!-- Datatable  -->
 <script src="datatable/jquery.dataTables.min.js"></script>
 <script src="datatable/dataTables.bootstrap4.min.js"></script>
-
-<!-- Custom Script-->
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="js/custom.js"></script>
 <script src="js/common.js"></script>
 
-<script src="js/custom-datatables.js"></script>
+
+<!-- Custom Script-->
+<!--<script src="js/custom.js"></script>-->
+<!--<script src="js/common.js"></script>-->
+
+<!--<script src="js/custom-datatables.js"></script>-->
 </body>
 <script>
 	// var state = "";
@@ -284,82 +287,211 @@
 
 	window.onload = initData;
 	function initData(){
-		$.ajax({
-			url:baseUrl+"order/getOrders",
-			type:"get",
-			data:{state:"2"},
-			success:function (data){
-				if(data.success){
-					var list = data.data;
-					console.info(list);
-					var tbody = $("#tb");
-					var html="";
-					for(var i = 0; i< list.length;i++){
-						var id = list[i].id;
-						html+="<tr>";
-						html+="<td><div className=\"custom-control custom-checkbox\">";
-						html+="<input className=\"custom-control-input\" type=\"checkbox\" id=\"1\">";
-						html+="<label className=\"custom-control-label\" htmlFor=\"1\"></label>";
-						html+="</div>";
-						html+="</td>";
-						html+="<td>"+list[i].merchName+"</td>";
-						html+="<td>"+list[i].cusName+"</td>";
-						html+="<td>"+list[i].count+"</</td>";
-						html+="<td>"+list[i].state.replace("0","订单未配送").replace("1","订单已出库").replace("2","订单已完成")+"</</td>";
-						html+="<td>"+list[i].phone+"</</td>";
-						html+="<td>"+list[i].address+"</</td>";
-						html+="<td>"+list[i].remark+"</</td>";
+		 var cusName = "";
+		 var state = "";
+		 cusName = $("#cusName").val();
+		 state = $("#state option:selected").val();
+		$('#detail').DataTable({
+			// "destroy":true,
+			"bDestroy":true,
+			"processing": false,
+			"searching": false,
+			// "serverSide": true,
+			"bPaginate":false,
+			"bLengthChange":false,
+			"edit":false,
+			"bFilter":false,
+			"bSort":true,
+			"bAutoWidth": true,
+			language: {
+				"sProcessing": "处理中...",
+				"sLengthMenu": "显示 _MENU_ 项结果",
+				"sZeroRecords": "没有匹配结果",
+				"sInfo": "显示第 _START_ 至 _END_ 项结果，共 _TOTAL_ 项",
+				"sInfoEmpty": "显示第 0 至 0 项结果，共 0 项",
+				"sInfoFiltered": "(由 _MAX_ 项结果过滤)",
+				"sInfoPostFix": "",
+				"sSearch": "搜索:",
+				"sUrl": "",
+				"sEmptyTable": "表中数据为空",
+				"sLoadingRecords": "载入中...",
+				"oPaginate": {
+					"sFirst": "首页",
+					"sPrevious": "上页",
+					"sNext": "下页",
+					"sLast": "末页"
+				}},
+			"ajax": {//ajax请求数据源
+				"url": baseUrl+"/option/getOrderB",
+				data:{
+					cusName:cusName,
+					state:state
+				},
+				"type": "post",
+			},
+			"order": [],
+			"columns": [
+				{"sTitle":"父订单编号", "mDataProp": "ordersId","sClass": "center", "bSortable": false, "sWidth": "200",editable:true},
+				{"sTitle":"子订单编号", "mDataProp": "id","sClass": "center", "bSortable": false, "sWidth": "200",editable:true},
+				{"sTitle":"流水号", "mDataProp": "flowno","sClass": "center", "bSortable": false, "sWidth": "200",editable:true},
+				{"sTitle":"药名", "mDataProp": "merchName","sClass": "center", "bSortable": false, "sWidth": "200",editable:true},
+				{"sTitle":"数量", "mDataProp": "count","sClass": "center", "bSortable": false, "sWidth": "200",editable:true},
+				{"sTitle":"批号", "mDataProp": "beachNum","sClass": "center", "bSortable": false, "sWidth": "200",editable:true},
+				{"sTitle":"商业公司", "mDataProp": "depositoryName","sClass": "center", "bSortable": false, "sWidth": "200",editable:true},
+				{"sTitle":"支付方式", "mDataProp": "sallWay","sClass": "center", "bSortable": false, "sWidth": "200",mRender:function (data,cell){
+						if(data=='0'){
+							return "对公实销实结";
+						}
+						if(data=='1'){
+							return "对公月结";
+						}if(data=='2'){
+							return "现金（微信、支付宝、转账）";
+						}if(data=='3'){
+							return "赠品不回款";
+						}if(data=='4'){
+							return "效期换货不回款";
+						}if(data=='5'){
+							return "抵返利，不回款";
+						}
 
-						html+="</tr>";
+					}},
+				{"sTitle":"单价", "mDataProp": "sallAmount","sClass": "center", "bSortable": false, "sWidth": "200"},
+				{"sTitle":"已开票数", "mDataProp": "pjc","sClass": "center", "bSortable": false, "sWidth": "200"},
+				{"sTitle":"已回款数", "mDataProp": "moneyCount","sClass": "center", "bSortable": false, "sWidth": "200"},
+				{"sTitle":"单价", "mDataProp": "sallAmount","sClass": "center", "bSortable": false, "sWidth": "200"},
+				{"sTitle":"总价", "mDataProp": "amount","sClass": "center", "bSortable": false, "sWidth": "200"}
+				// {"sTitle":"客户名称", "mDataProp": "amount","sClass": "center", "bSortable": false, "sWidth": "200"},
+				// {"sTitle":"地址", "mDataProp": "amount","sClass": "center", "bSortable": false, "sWidth": "200"}
+			],"createdRow": function( row, data, dataIndex ) {
+			if(data.id.length > 3){//只有超长，才有td点击事件
+				$(row).children('td').eq(1).attr('onclick','javascript:changeShowRemarks(this);');
+			}
+			$(row).children('td').eq(1).attr('content',data.id);
+			if(data.ordersId.length > 3){//只有超长，才有td点击事件
+				$(row).children('td').eq(0).attr('onclick','javascript:changeShowRemarks(this);');
+			}
+			$(row).children('td').eq(0).attr('content',data.ordersId);
+
+			if(data.flowno.length > 3){//只有超长，才有td点击事件
+				$(row).children('td').eq(2).attr('onclick','javascript:changeShowRemarks(this);');
+			}
+			$(row).children('td').eq(6).attr('content',data.depositoryName);
+				if(data.depositoryName.length > 3){//只有超长，才有td点击事件
+					$(row).children('td').eq(6).attr('onclick','javascript:changeShowRemarks(this);');
+				}
+				$(row).children('td').eq(6).attr('content',data.depositoryName);
+
+
+			// if(data.cusName.length > 3){//只有超长，才有td点击事件
+			// 	$(row).children('td').eq(1).attr('onclick','javascript:changeShowRemarks(this);');
+			// }
+			// $(row).children('td').eq(1).attr('content',data.cusName);
+
+		},
+		"columnDefs" : [
+			{
+				"type": "date",
+				"targets": 1,
+				"render": function (data, type, full, meta) {
+					if (full.id.length > 3) {
+						return getPartialRemarksHtml(full.id);//显示部分信息
+					} else {
+						return full.id;//显示原始全部信息 }
 					}
-					tbody.append(html);
-				}else{
-					alert("无订单，请添加");
+				}},
+			{
+				"type": "date",
+				"targets": 0,
+				"render": function (data, type, full, meta) {
+					if (full.ordersId.length > 3) {
+						return getPartialRemarksHtml(full.ordersId);//显示部分信息
+					} else {
+						return full.ordersId;//显示原始全部信息 }
+					}
+				}},
+			{
+				"type": "date",
+				"targets": 2,
+				"render": function (data, type, full, meta) {
+					if (full.flowno.length > 3) {
+						return getPartialRemarksHtml(full.flowno);//显示部分信息
+					} else {
+						return full.flowno;//显示原始全部信息 }
+					}
+				}},
+			{
+				"type": "date",
+				"targets": 6,
+				"render": function (data, type, full, meta) {
+					if (full.depositoryName.length > 3) {
+						return getPartialRemarksHtml(full.depositoryName);//显示部分信息
+					} else {
+						return full.depositoryName;//显示原始全部信息 }
+					}
+				}}
+			// ,{
+			// 	"type": "date",
+			// 	"targets": 1,
+			// 	"render": function (data, type, full, meta) {
+			// 		if (full.cusName.length > 3) {
+			// 			return getPartialRemarksHtml(full.cusName);//显示部分信息
+			// 		} else {
+			// 			return full.cusName;//显示原始全部信息 }
+			// 		}
+			// 	}}
+		]
+		});
+	}
+
+
+	//切换显示备注信息，显示部分或者全部
+	function changeShowRemarks(obj){//obj是td
+		var content = $(obj).attr("content");
+		if(content != null && content != ''){
+			if($(obj).attr("isDetail") == 'true'){//当前显示的是详细备注，切换到显示部分
+				//$(obj).removeAttr('isDetail');//remove也可以
+				$(obj).attr('isDetail',false);
+				$(obj).html(getPartialRemarksHtml(content));
+			}else{//当前显示的是部分备注信息，切换到显示全部
+				$(obj).attr('isDetail',true);
+				$(obj).html(getTotalRemarksHtml(content));
+			}
+		}
+	}
+	//部分备注信息
+	function getPartialRemarksHtml(remarks){
+		return remarks.substr(0,3) + '&nbsp<a href="javascript:void(0);"><b>[详情...]</b></a>';
+	}
+
+	//全部备注信息
+	function getTotalRemarksHtml(remarks){
+		return remarks + '&nbsp;<a href="javascript:void(0);" ><b>[收起]</b></a>';
+	}
+
+
+
+	function catch_keyword(word){
+		get_source(word);
+		$("#cusName").autocomplete({
+			source: availableTags, //数据源
+			messages: {
+				noResults: '',
+				results: function(){
 				}
 			}
 		});
 	}
-	function deleteOrder(id){
-		var confirm = window.confirm("确定要删除吗？")
-		if(!confirm){return false;}
-		$.ajax({
-			url:baseUrl+"order/deleteById",
-			type:"get",
-			data:{id:id},
-			success:function (data){
-				if(data.success){
-					alert("删除成功！");
-					window.location.href="orders.html";
-				}
-			}
-		});
-	}
-	function editOrder(id){
-		alert(id);
-	}
-	function pubOrder(id){
-		$.ajax({
-			url:baseUrl+"order/updateById",
-			type:"get",
-			data:{id:id,state:"1"},
-			success:function (data){
-				if(data.success){
-					alert("发货成功");
-					window.location.href="orders.html";
-				}
-			}
-		});
-	}
-	function finOrder(id){
-		$.ajax({
-			url:baseUrl+"order/updateById",
-			type:"get",
-			data:{id:id,state:"2"},
-			success:function (data){
-				if(data.success){
-					alert("订单完成");
-					window.location.href="orders.html";
-				}
+	//请求后端获取数据源
+	function get_source(word) {
+		var url = baseUrl+"cus/getCusOption?keyword=" + word;
+		$.get({
+			type: 'GET',
+			url: url,
+			async: false,//改为同步
+			dataType: 'json',
+			success: function (response) {
+				console.log('1');
+				availableTags = response;
 			}
 		});
 	}
@@ -368,7 +500,11 @@
 	 * 导出订单
 	 */
 	function exportOrder(){
-		location.href=baseUrl+"export/exportOrders?state=2";
+		var cusName = "";
+		var state = "";
+		cusName = $("#cusName").val();
+		state = $("#state option:selected").val();
+		location.href=baseUrl+"option/exportOrders?state="+state+"&&cusName="+cusName;
 	}
 </script>
 </html>
